syntax = "proto3";

package messagegateway.v1;

//this is a complete fcking shitshow someone needs to clean this up
service MessageGatewayService {
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse) {}

  rpc EditMessage(EditMessageRequest) returns (EditMessageResponse) {}

  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse) {}
}

message GetMessagesRequest {
  string chat_room_uuid = 1;
  string channel_uuid = 2;
}

message GetMessagesResponse {
  repeated Msg messages = 1;
}

message EditMessageRequest {
  string author = 1;
  string content = 2;
  string author_uuid = 3;
  string chat_room_uuid = 4;
  string channel_uuid = 5;
  string message_uuid = 6;
  string timestamp = 7;
}

message EditMessageResponse {
  string author = 1;
  string content = 2;
  string author_uuid = 3;
  string chat_room_uuid = 4;
  string channel_uuid = 5;
  string message_uuid = 6;
  string timestamp = 7;
}

message DeleteMessageRequest {
  string author = 1;
  string content = 2;
  string author_uuid = 3;
  string chat_room_uuid = 4;
  string channel_uuid = 5;
  string message_uuid = 6;
  string timestamp = 7;
}

message DeleteMessageResponse {
  string status = 1;
  string error = 2;
}

message Msg {
  string author = 1;
  string content = 2;
  string author_uuid = 3;
  string chat_room_uuid = 4;
  string channel_uuid = 5;
  string message_uuid = 6;
  string timestamp = 7;
}
